# TCSDG

./: sdkconfig  uart_data_read.py
TextDemo/: sdkconfig  sdkconfig.old
TextDemo/main/: main.c
UART_tx_rx/: CMakeLists.txt
UART_tx_rx/main/: main.c
blink/main/: blink_example_main.c  main.c
hello_world/main/: CMakeLists.txt  hello_world_main.c
i2cTesting/: CMakeLists.txt
i2cTesting/main/: CMakeLists.txt  main.c
main/: CMakeLists.txt  main.c  wifi_app.c  wifi_app.h
main/webpage/: index.html
ping-pong/: sdkconfig  sdkconfig.old
ping-pong/main/: main.c
